	* arguments to 'new' constructor can be %hash or $hashref now
	  (previously was only $hashref)

	* work around a Perl segfault (Matthieu PATOU <mp@oxado.com>)
	  see http://lists.danga.com/pipermail/memcached/2007-June/004511.html

2007-06-19: version 1.23

	* add 'remove' as an alias for 'delete' (Dave Cardwell <dave@davecardwell.co.uk>)

2007-06-18: version 1.22

	* lost connection handling broken due to wrong %sock_map indexing
	  http://rt.cpan.org/Public/Bug/Display.html?id=27181
	  fix from RHESA

	* let parser_class be configured as a constructor option,
	  defaulting to XS if available, else regular.  (unless
	  $ENV{NO_XS} is set, in which case the default is regular)

2007-05-02: version 1.21

	* new faster optional interface for GetParser subclasses.  doing
	  this release so upcoming Cache::Memcached::GetParserXS can
	  depend on this.  otherwise this release isn't interesting.

2007-04-16: version 1.20

        * fix "Warning produced when flush_all called" from CDENT
	  http://rt.cpan.org/Public/Bug/Display.html?id=22181

	* support access via unix domain sockets. (Nathan Neulinger <nneul@umr.edu>)

	* abstract out response parsing into own class, and add XS-module
	  detection, so if you have the XS (C) version, things'll be faster.
	  that part's not done yet.

2006-07-03
	* don't use dual scalar/glob sockets.  makes it all profilable
	  again under SmallProf, DProf, and Devel::Profiler, all three
	  of which used to barf on those weird sockets previously
	* only init_buckets once, when servers are changed
	* don't call sock_to_host and get_sock as much:  cache closer
	  in get_multi
	* more internal caching (buck2sock, etc)
	* fast paths for namespaces/single sock/etc in a few more places
	* general micro-speedups all over

2006-06-27
	* patch from Maxim Dounin <mdounin@rambler-co.ru> to fix a typo
	  which caused no_rehash flag to not work.
	* release 1.18

2006-04-29
	* flush_all command from Patrick Michael Kane <modus-memcache@pr.es.to>